# x-on-resize

./: .gitignore  Makefile.am  README.md  configure.ac  x-on-resize.c  x-on-resize.man  xrandr-auto
